--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,10 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;800&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+/* dyslexia
+  older ppl
+  most accessible fonts
+  sans-serif - > arial
+/* ppl with dyslexia, older ppl sans serif font like arial and cominc sans */
 
 a {
   color: inherit;
