--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -24,6 +24,15 @@ a {
   padding: 0px;
 }
 
+.wrapper {
+  max-width: 90vw;
+  margin: 0 auto;
+}
+
+.box-shadow-primary {
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
